[PHP] Configured bind mount and changed nginx.conf php port from 3000->9000 refer php:7.4-fpm-alpine docs @ dockerhub

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,6 @@ services:
     build:
       context: ./dockerfiles
       dockerfile: php.dockerfile 
+    volumes:
+      - ./src:/var/www/html:delegated
+    
