--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,4 +12,13 @@ services:
       dockerfile: php.dockerfile 
     volumes:
       - ./src:/var/www/html:delegated
-    
+  mysql:
+    image: 'mysql:5.7'
+    env_file:
+      - ./env/mysql.env
+  composer:
+    build:
+      context: ./dockerfiles
+      dockerfile: composer.dockerfile
+    volumes:
+      - ./src:/var/www/html
